--- a/apps/server/base/service.yaml
+++ b/apps/server/base/service.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: budgeteer-server
+  name: server
 spec:
   selector:
-    app: budgeteer-server
+    app: server
   ports:
     - protocol: TCP
       port: 3000
