--- a/apps/ui/base/service.yaml
+++ b/apps/ui/base/service.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: budgeteer-ui
+  name: ui
 spec:
   selector:
-    app: budgeteer-ui
+    app: ui
   ports:
     - protocol: TCP
       port: 80
