--- a/cluster/argocd-apps/budgeteer-ui-app.yaml
+++ b/cluster/argocd-apps/budgeteer-ui-app.yaml
@@ -1,14 +1,13 @@
-
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: budgeteer-server
+  name: budgeteer-ui
   namespace: argocd
 spec:
   project: default
   source:
-    repoURL: <your-git-repo-url>
-    path: apps/budgeteer-server
+    repoURL: https://github.com/sammosios/budgeteer.git
+    path: apps/ui/base
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
