--- a/cluster/argocd-apps/budgeteer-backend-app.yaml
+++ b/cluster/argocd-apps/budgeteer-backend-app.yaml
@@ -11,7 +11,7 @@ spec:
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
-    namespace: default
+    namespace: budgeteer
   syncPolicy:
     automated:
       prune: true
