--- a/apps/ui/base/deployment.yaml
+++ b/apps/ui/base/deployment.yaml
@@ -1,4 +1,3 @@
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -20,3 +19,6 @@ spec:
         image: docker.io/sammosios/budgeteer-ui:latest
         ports:
         - containerPort: 80
+        env:
+        - name: API_URL
+          value: "http://budgeteer-server.default.svc.cluster.local:3000"
